# Annual-Project

./: .gitattributes  .gitignore  CLAUDE.md  Controller.py  Formation_Flight.py  PID_Tuner.py  README.md  future.md  plan.md  start_gazebo.sh
new_fuction/:  HybridAttitudeController.py  Controller.py  Formation_Flight.py  GPU_Param_Optimizer.py  Packaged_Drone_Dynamics_Model.py  QuaternionDrone.py  Rotor.py  (+5 more)
next_project/: .dockerignore  .gitignore  Dockerfile  README.md  config.py  environment.yml  main.py  pyproject.toml  requirements-dev.lock.txt  requirements.lock.txt  requirements.txt
next_project/artifacts/: README.md
next_project/core/: __init__.py  allocator.py  artificial_potential_field.py  controller.py  drone.py  drone_params.py  fault_detector.py  formation_adaptation.py  formation_clearance.py  formation_safety.py  map_loader.py  obstacles.py  result_schema.py  risk_report.py  rotor.py  safety_profiles.py  sensors.py  smc.py  topology.py  wind_field.py
next_project/core/planning/: __init__.py  astar.py  base.py  dijkstra.py  dstar_lite.py  dual_mode.py  esdf.py  firi.py  gnn_planner.py  hybrid_astar.py  informed_rrt_star.py  new_plan.md  replanner.py  rrt_star.py  trajectory_optimizer.py  visibility_graph.py
next_project/cpp/: CMakeLists.txt  README.md  build_windows.ps1  使用说明.md
next_project/cpp/include/: allocator.hpp  artificial_potential_field.hpp  astar_planner.hpp  config.hpp  controller.hpp  drone.hpp  dstar_lite.hpp  dual_mode.hpp  dynamic_scenario.hpp  esdf.hpp  fault_detector.hpp  firi.hpp  formation_apf.hpp  formation_safety.hpp  formation_simulation.hpp  gnn_planner.hpp  hybrid_astar_planner.hpp  json_writer.hpp  map_loader.hpp  math_utils.hpp  obstacle_scenario.hpp  obstacles.hpp  occupancy_grid.hpp  replanner.hpp  rotor.hpp  sensor.hpp  smc.hpp  topology.hpp  visibility_graph.hpp  visualization.hpp  wind_field.hpp
next_project/cpp/src/: allocator.cpp  apf_formation_probe.cpp  artificial_potential_field.cpp  benchmark.cpp  controller.cpp  drone.cpp  dynamic_main.cpp  firi.cpp  formation_apf.cpp  formation_safety.cpp  formation_safety_probe.cpp  formation_simulation.cpp  gnn_planner.cpp  main.cpp  map_loader.cpp  obstacle_scenario.cpp  occupancy_grid.cpp  rotor.cpp  smc.cpp  test_wh.cpp  topology.cpp  visibility_graph.cpp  visualization.cpp  warehouse_main.cpp  wind_field.cpp
next_project/docs/: GNN分层双模式架构设计.md  benchmark-schema.md  capability-matrix.md  deep-research-report.md  drone-params-profile.md  example.md  photo_reconstruction_integration.md  严厉评委攻防手册.md  中期规划书.md  中期验收记录.md  优化反效果归因分析.md  使用说明.md  后续SCI文献调研与改进计划书.md  后续代码实施映射.md  四旋翼集群编队仿真系统_零基础完全拆解与答辩指南.md  完整答辩攻防手册.md  技术文档.md  照片采集操作手册.md  短期规划书.md  答辩QA续写_项目实战版.md  答辩QA预演.md  答辩临场急救卡.md  答辩准备索引.md  答辩模拟演练脚本.md  需求符合性检查.md  项目总改进规划.md  项目零基础讲解.md
next_project/docs/superpowers/plans/: 2026-05-12-chinese-result-reporting.md  2026-05-12-formation-adaptation.md  2026-05-13-rrt-assisted-lookahead-adaptation.md  2026-05-13-rrt-formation-test-maps.md
next_project/docs/superpowers/specs/: 2026-04-26-warehouse-scenario-design.md  2026-05-04-dynamic-replay-design.md  2026-05-13-rrt-formation-test-maps-design.md
next_project/experiments/: __init__.py  ablation.py  metrics_extractor.py  planner_comparison.py  report_cpp_results.py  report_results.py  report_writer.py  result_reporter.py  run_ablation.py  run_cpp_report.py  scenario_registry.py
next_project/experiments/calibration/: __init__.py  drone_params_calibration.py
next_project/maps/: company_cubicles.json  formation_maze_stress.json  laboratory.json  meeting_room.json  open3d_redwood_fragment.json  rrt_dual_channel_escape.json  sample_corridor.json  sample_office.json  sample_open_office.json  sample_simple.json  sample_warehouse.json  sample_warehouse_edited.json  school_corridor.json  unknown_map_arena.json
next_project/schemas/: benchmark_result.schema.json  sim_result.schema.json
next_project/scripts/: compare_results.py  reproduce.ps1  reproduce.sh
next_project/simulations/: __init__.py  benchmark.py  formation_simulation.py  obstacle_scenario.py  visualization.py
next_project/tests/: benchmark_comparison.py  test_apf_enhanced.py  test_controller_profiles.py  test_cpp_result_reporting.py  test_cpp_sync_static.py  test_cross_line_regression.py  test_drone_params.py  test_drone_params_calibration.py  test_esdf_correct.py  test_experiment_workflow.py  test_fault_tolerance.py  test_fault_tolerance_online.py  test_formation_adaptation.py  test_formation_clearance.py  test_formation_safety.py  test_gnn_planner.py  test_metrics_extractor.py  test_obstacle_scenario.py  test_planner_comparison.py  test_replanner_danger_quality.py  test_replanner_semantics.py  test_replanner_subgoal.py  test_result_reporter.py  test_result_schema.py  test_risk_report.py  test_safety_profiles.py  test_trajectory_optimizer.py
next_project/tools/: cpp_risk_report.py
next_project/web/: dynamic_replay.html  requirements.txt  server.py
(+12 files in other folders)
