[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-formation-platform"
version = "0.1.0"
description = "Indoor multi-UAV formation simulation, planning, avoidance, and control experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "plotly",
    "cvxpy>=1.4",
    "osqp>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["core", "core.planning", "simulations"]
py-modules = ["config", "main"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
