[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-formation-platform"
version = "0.1.0"
description = "Indoor multi-UAV formation simulation, planning, avoidance, and control experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "plotly",
    "cvxpy>=1.4",
    "osqp>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "jsonschema",
]
web = [
    "fastapi",
    "uvicorn",
    "plotly",
    "python-multipart",
]

[tool.setuptools]
packages = ["core", "core.planning", "simulations"]
py-modules = ["config", "main"]

[tool.pytest.ini_options]
# 唯一权威 pytest 配置；pytest.ini 已删除。
# 如需并行执行：pip install pytest-xdist && pytest -n auto
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
